Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42344

Pre-Edit string shows buggy behaviour when used with Japanese (Hiragana)

XMLWordPrintable

    • d2f0f46c459bca229d30132f233e724d55490a78

      On Focus change pre edit string disappears. Attached example reproduces the behavior.

      Steps to reproduce

      • In the 'Region and Language' select 'Change keyboards..' Add Japanese Microsoft IME Keyboard. (or run on Japanese edition of Windows)
      • Run attached sample.
      • From the Language Bar change the input language to Japanese. Also change the Input mode to Hiragana (it has the pre-edit state). Now the taskbar should have the icons shown in the taskbar.png
      • Click a line edit and press 'a' key five times. (inputed "あああああ”in Japanese)
      • Click another line edit and press 'a' once, six "あ" will appear unexpectedly.
      • Click first line edit again, "あああああ" inputed will disappear

        1. qtbug42344_diag4.diff
          6 kB
        2. qtbug42344_log4.txt
          4 kB
        3. qtbug42344_log5.txt
          13 kB
        4. qtbug42344_log5.txt
          13 kB
        5. qtbug42344.zip
          2 kB
        6. QTBUG-42344.zip
          4 kB
        7. test-liang-chinese-google-20141128.png
          test-liang-chinese-google-20141128.png
          24 kB
        8. test-liang-japanese-hirgana-20141128.png
          test-liang-japanese-hirgana-20141128.png
          22 kB
        For Gerrit Dashboard: QTBUG-42344
        # Subject Branch Project Status CR V

            andysh Andy Shaw
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes