When the focus changes make sure that the IME finishes correctly

When clicking onto another widget while in the middle of composing should
cause it to be seen as an acceptance of the composed text so far instead
of just cancelling it outright.

This was validated against the Japanese, Korean and Chinese IMEs on
Windows 7.

Task-number: QTBUG-42344
Change-Id: I03be0cd099840f51a9550929f33e2afbbf31e85a
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@theqtcompany.com>

cregit: d2f0f46c459bca229d30132f233e724d55490a78 https://github.com/qt/qtbase/commit/d2f0f46c459bca229d30132f233e724d55490a78